--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus vero tempora distinctio esse ab, excepturi
+        dolor laudantium temporibus. Asperiores corporis tempore, assumenda perferendis at reprehenderit pariatur porro
+        cumque laudantium incidunt.</p>
 
 </body>
 
